# UFCPredictor

./: .gitignore  README_environment.md  pyproject.toml  requirements.txt  train_xgboost_model.ipynb  ufcstats_scraper.ipynb
.github/workflows/: pytest.yml  ruff.yml
notebooks/: train_xgboost_model.ipynb  ufcstats_scraper.ipynb
ufcpredictor/: main.py  pipeline.py  types.py
ufcpredictor/data_sources/: __init__.py  base.py  base_fights.py
ufcpredictor/features/: __init__.py  base.py
ufcpredictor/splitters/: __init__.py  base.py
