[project]
name = "ufcpredictor"
version = "0.1.0"
description = "Predictor of UFC fights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
